--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           </header>
 
           <ul>
+            <!-- Exemplo de li -->
             <!-- <li class="expense">
               <img src="./img/food.svg" alt="Ícone de tipo da despesa" />
 
